--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,14 +17,17 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_advanced_switch: ^3.1.0
+  flutter_dotenv: ^5.1.0
   flutter_rating_bar: ^4.0.1
   flutter_slidable: ^4.0.3
   flutter_svg: ^2.2.0
   flutter_xlider: ^3.5.0
   get: ^4.7.2
+  http: ^1.2.2
   intl: any
   percent_indicator: ^4.2.5
   pinput: ^5.0.1
+  shared_preferences: ^2.3.2
   sheet: ^1.0.0
   smooth_page_indicator: ^1.2.1
   syncfusion_flutter_charts: ^30.2.7
@@ -40,6 +43,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - .env
 
   fonts:
     - family: Manrope
