--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   syncfusion_flutter_charts: ^30.2.7
   syncfusion_flutter_gauges: ^30.2.7
   textfield_tags: ^3.0.1
+  url_launcher: ^6.2.6
 dev_dependencies:
   flutter_lints: ^5.0.0
   flutter_test:
